# textable-backend

./: Dockerfile  README.md  pyproject.toml
textable_backend/: app.py
textable_backend/prompts/: greenbot_prompt.yaml  purplebot_prompt.yaml  system_prompt.yaml
